fix card width on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,7 @@ body {
 
 .cards-container {
     width: 100%;
+    margin: 0 auto;
     position: relative;
 }
 
